# dddmr_navigation_ws

./: .gitignore  ACKERMANN_FULL_DEBUG_GUIDE.md  FAST_LIO_REPLACEMENT_GUIDE.md  MID360_CONFIG_ANALYSIS.md  README.md
.github/agents/: ROS_ENG.agent.md
dddmr_docker/: run_demo.bash
dddmr_docker/docker_file/: Dockerfile_x64_l4t_r36  build.bash  run_x64_gpu.bash
src/dddmr_lego_loam/lego_loam_bor/: CLOUD_PREPROCESSOR_GUIDE.md  CMakeLists.txt
src/dddmr_lego_loam/lego_loam_bor/config/: loam_ackermann_mid360_config.yaml  loam_ackermann_mid360_config_optimized.yaml  loam_bag_ackermann_mid360_config.yaml  loam_bag_lidar2depthimg_config.yaml  loam_bag_mid360_config.yaml  loam_bag_yolo_config.yaml
src/dddmr_lego_loam/lego_loam_bor/include/: cloudPreprocessor.h  featureAssociation.h  imageProjection.h  interactive_pose_graph_editor.h  mapOptimization.h  yoloImageProjection.h  yolo_ros2_image_sub.h
src/dddmr_lego_loam/lego_loam_bor/launch/: cloud_preprocessor.launch.py  lego_loam_ackermann_mid360.launch.py  lego_loam_ackermann_mid360_bag.launch.py  lego_loam_ackermann_mid360_with_preprocessor.launch.py  lego_loam_bag_lidar2depthimg.launch  lego_loam_bag_mid360.launch  lego_loam_bag_yolo.launch  yolo_image_sub_test.launch
src/dddmr_lego_loam/lego_loam_bor/rviz/: lego_loam_yolo.rviz  yolo_image_sub_test.rviz
src/dddmr_lego_loam/lego_loam_bor/scripts/: performance_monitor.py
src/dddmr_lego_loam/lego_loam_bor/src/: cloudPreprocessor.cpp  cloud_preprocessor_node.cpp  featureAssociation.cpp  imageProjection.cpp  imageProjection.h  lego_loam_bag_lidar2depthimg_node.cpp  mapOptimization.cpp
src/dddmr_lego_loam/lego_loam_bor/src/utils/: pointcloud2occupancy.cpp  yolo_ros2_image_sub.cpp
src/dddmr_local_planner/base_trajectory/: CMakeLists.txt
src/dddmr_local_planner/local_planner/config/: ackermann_trajectory_generator.yaml
src/dddmr_local_planner/local_planner/src/: local_planner.cpp
src/dddmr_local_planner/mpc_critics/: CMakeLists.txt
src/dddmr_local_planner/mpc_critics/src/: mpc_critics_ros.cpp
src/dddmr_local_planner/recovery_behaviors/: CMakeLists.txt
src/dddmr_local_planner/recovery_behaviors/src/: recovery_behaviors_ros.cpp
src/dddmr_local_planner/trajectory_generators/: CMakeLists.txt  trajectory_generators.xml
src/dddmr_local_planner/trajectory_generators/src/: trajectory_generators_ros.cpp
src/dddmr_local_planner/trajectory_generators/theories/: ackermann_simple_trajectory_generator_theory.cpp
src/dddmr_mcl_3dl/: CMakeLists.txt
src/dddmr_mcl_3dl/config/: mcl_3dl_lego_map.yaml  mcl_3dl_ros2.yaml  mcl_3dl_ros2_with_lego_map.yaml
src/dddmr_mcl_3dl/include/: mcl_3dl.h
src/dddmr_mcl_3dl/include/mcl_3dl/: sub_maps.h
src/dddmr_mcl_3dl/launch/: mcl_3dl.launch.py  mcl_3dl_lego_map.launch.py
src/dddmr_mcl_3dl/src/: mcl_3dl.cpp  sub_maps.cpp
src/dddmr_p2p_move_base/: CMakeLists.txt
src/dddmr_p2p_move_base/config/: ackermann_mid360_localization.yaml  ackermann_workaround.yaml  dddmr_navigation.yaml  dddmr_navigation_ackermann.yaml
src/dddmr_p2p_move_base/include/p2p_move_base/: p2p_move_base.h
src/dddmr_p2p_move_base/launch/: dddmr_navigation.launch.py  dddmr_navigation_with_map_loading.launch.py
src/dddmr_p2p_move_base/script/: clicked2goal.py
src/dddmr_p2p_move_base/src/: p2p_move_base.cpp
src/dddmr_perception_3d/: CMakeLists.txt
src/dddmr_perception_3d/config/: perception_3d_test.yaml
src/dddmr_perception_3d/launch/: perception_3d_test.launch.py
src/dddmr_perception_3d/plugins/: multilayer_spinning_lidar.cpp
src/dddmr_perception_3d/src/: perception_3d_ros.cpp
src/dddmr_rviz_tools/dddmr_rviz_default_plugins/: CMakeLists.txt
src/dddmr_rviz_tools/dddmr_rviz_default_plugins/src/dddmr_rviz_default_plugins/tools/point_cloud_selection/: point_cloud_selection_tool.cpp
src/dddmr_rviz_tools/map_editor_panel/: CMakeLists.txt
src/dddmr_rviz_tools/mapping_panel/: CMakeLists.txt
src/dddmr_semantic_segmentation/: CMakeLists.txt
src/lego_map/: edges.pcd  ground.pcd  map.pcd  poses.pcd
src/lego_map/pcd/: 0_feature.pcd  0_ground.pcd  0_surface.pcd  10_feature.pcd  10_ground.pcd  10_surface.pcd  11_feature.pcd  11_ground.pcd  11_surface.pcd  12_feature.pcd  12_ground.pcd  12_surface.pcd  13_feature.pcd  13_ground.pcd  13_surface.pcd  14_feature.pcd  14_ground.pcd  14_surface.pcd  15_surface.pcd  16_ground.pcd  16_surface.pcd  18_feature.pcd  18_ground.pcd  19_feature.pcd  19_ground.pcd  1_feature.pcd  1_ground.pcd  1_surface.pcd  20_feature.pcd  20_ground.pcd  21_feature.pcd  21_ground.pcd  22_feature.pcd  24_feature.pcd  25_ground.pcd  26_surface.pcd  27_feature.pcd  27_ground.pcd  27_surface.pcd  28_feature.pcd  (+50 more)
src/lego_map2025_12_29_10_13_05/: edges.pcd
src/lego_map2025_12_29_10_13_05/pcd/: 0_feature.pcd  0_ground.pcd  0_surface.pcd  10_ground.pcd  10_surface.pcd  11_feature.pcd  11_surface.pcd  12_surface.pcd  13_feature.pcd  14_feature.pcd  14_ground.pcd  15_feature.pcd  15_ground.pcd  16_feature.pcd  17_feature.pcd  17_ground.pcd  17_surface.pcd  18_surface.pcd  19_surface.pcd  1_feature.pcd  1_ground.pcd  1_surface.pcd  20_surface.pcd  21_surface.pcd  22_ground.pcd  22_surface.pcd  23_feature.pcd  23_ground.pcd  23_surface.pcd  24_ground.pcd  24_surface.pcd  25_feature.pcd  25_surface.pcd  26_feature.pcd  26_ground.pcd  27_ground.pcd  29_feature.pcd  29_ground.pcd  30_surface.pcd  31_feature.pcd  (+33 more)
src/lego_map2025_12_31_09_59_11/: edges.pcd  ground.pcd  map.pcd  poses.pcd
src/lego_map2025_12_31_09_59_11/pcd/: 10_feature.pcd  10_ground.pcd  10_surface.pcd  11_feature.pcd  11_ground.pcd  11_surface.pcd  12_feature.pcd  12_ground.pcd  12_surface.pcd  13_feature.pcd  13_ground.pcd  13_surface.pcd  14_feature.pcd  14_ground.pcd  14_surface.pcd  15_feature.pcd  15_ground.pcd  15_surface.pcd  16_feature.pcd  16_ground.pcd  16_surface.pcd  17_feature.pcd  17_ground.pcd  17_surface.pcd  18_feature.pcd  18_ground.pcd  18_surface.pcd  19_feature.pcd  19_ground.pcd  19_surface.pcd  1_feature.pcd  1_ground.pcd  1_surface.pcd  20_feature.pcd  20_ground.pcd  20_surface.pcd  21_feature.pcd  21_ground.pcd  21_surface.pcd  22_feature.pcd  (+94 more)
(+5 files in other folders)
